cambiado texto a GitBash

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Comentario de prueba de git en VSC -->
-    <h1>un dos tres blablas , probandoo</h1>
+    <!-- Comentario de prueba de git en GITBASH-->
+    
+    <h1> un dos tres blablas , probandoo GIT BASH </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, debitis optio voluptas atque deserunt consectetur ipsam nesciunt labore accusantium voluptate?</p>
     <p> hemos añadido un párrafo en remoto en GitHub! </p>
-    <p> por fin sé lo que es una branch! (rama) del git</p>
-    <p> merge en local de testRama2 </p>
     <!-- bajar=PULL, subir=PUSH -->
     <!-- PULL REQUEST es para que el jefe verifique y autorice los cambios-->
     <script src="main.js"></script>
