comentario de primer commit local sin -m

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1> un dos tres blablas , probandoo GIT BASH </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, debitis optio voluptas atque deserunt consectetur ipsam nesciunt labore accusantium voluptate?</p>
     <p> hemos añadido un párrafo en remoto en GitHub! </p>
+	
+<p> anotación punky desde el bloc de notas!!! </p>
+
     <!-- bajar=PULL, subir=PUSH -->
     <!-- PULL REQUEST es para que el jefe verifique y autorice los cambios-->
     <script src="main.js"></script>
