commit desde rama2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, debitis optio voluptas atque deserunt consectetur ipsam nesciunt labore accusantium voluptate?</p>
     <p> hemos añadido un párrafo en remoto en GitHub! </p>
 	
-<p> anotación punky desde el bloc de notas!!! </p>
+<p> anotación punky desde el editor de texto del propio GITBASH </p>
 
     <!-- bajar=PULL, subir=PUSH -->
     <!-- PULL REQUEST es para que el jefe verifique y autorice los cambios-->
